--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,14 @@ description = "Compute key lexical bundles (4-grams) keyness between a target co
 readme = "README.md"
 requires-python = ">=3.8"
 license = { text = "MIT" }
-authors = [{ name = "Taehyeong Kim" }]
+authors = [{ name = "Taehyeong (Terry) Kim", email= "tk654@nau.edu"}]
 
 # No external deps: using stdlib only
 dependencies = []
 
 [project.urls]
 Homepage = "https://github.com/taehyeongterrykim/keylexbundles"
+PyPI = "https://pypi.org/project/keylexbundles/"
 
 [project.scripts]
 # installs a console command `keylexbundles` that calls main()
@@ -24,3 +25,13 @@ keylexbundles = "keylexbundles.__main__:main"
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["keylexbundles*"]
+
+classifiers = [
+  "Development Status :: 3 - Alpha",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.12",
+  "License :: OSI Approved :: MIT License",
+  "Intended Audience :: Science/Research",
+  "Topic :: Text Processing :: Linguistic"
+]
